--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
       <div class="overlay">
         <h1>Apple</h1>
       </div>
-      <a href="#" class="buy-now left-button">Buy Now</a>
+      <a href="https://www.apple.com/tr/" class="buy-now left-button" target="_blank">Buy Now</a>
     </div>
     <div class="panel right">
       <div class="overlay">
         <h1>Samsung</h1>
       </div>
-      <a href="#" class="buy-now right-button">Buy Now</a>
+      <a href="https://www.samsung.com/tr/" class="buy-now right-button" target="_blank">Buy Now</a>
+
     </div>
   </div>
   <script src="script.js"></script>
